[gd_scene load_steps=3 format=3 uid="uid://bxqj0i2f66j65"]

[ext_resource type="Script" path="res://Assets/Scripts/pack_menu.gd" id="1_j0lyq"]

[sub_resource type="LabelSettings" id="LabelSettings_lounx"]
font_size = 36

[node name="MainContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_j0lyq")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 0
text = "Packs"
label_settings = SubResource("LabelSettings_lounx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="PackOpen" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Open a Random Pack"

[node name="MenuButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Return to Main menu"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="AcquiredPack" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
label_settings = SubResource("LabelSettings_lounx")

[node name="AcquiredCard" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
label_settings = SubResource("LabelSettings_lounx")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/PackOpen" to="." method="OpenPack"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuButton" to="." method="SwitchSceneMainMenu"]
